syntax = "proto3";

package temporal.server.api.enums.v1;

option go_package = "go.temporal.io/server/api/enums/v1;enums";

enum DeadLetterQueueType {
    DEAD_LETTER_QUEUE_TYPE_UNSPECIFIED = 0;
    DEAD_LETTER_QUEUE_TYPE_REPLICATION = 1;
    DEAD_LETTER_QUEUE_TYPE_NAMESPACE = 2;
}

enum ChecksumFlavor {
    CHECKSUM_FLAVOR_UNSPECIFIED = 0;
    CHECKSUM_FLAVOR_IEEE_CRC32_OVER_PROTO3_BINARY = 1;
}

// State of a callback.
enum CallbackState {
    // Default value, unspecified state.
    CALLBACK_STATE_UNSPECIFIED = 0;
    // Callback is standing by, waiting to be triggered.
    CALLBACK_STATE_STANDBY = 1;
    // Callback is in the queue waiting to be executed or is currently executing.
    CALLBACK_STATE_SCHEDULED = 2;
    // Callback has failed with a retryable error and is backing off before the next attempt.
    CALLBACK_STATE_BACKING_OFF = 3;
    // Callback has failed.
    CALLBACK_STATE_FAILED = 4;
    // Callback has succeeded.
    CALLBACK_STATE_SUCCEEDED = 5;
}
